--- a/index.html
+++ b/index.html
@@ -719,8 +719,8 @@
                         <span data-lang-en>To create an audio-centric architecture where the FMOD music track acts as a "conductor," controlling gameplay, level generation, shaders, and UI.</span>
                     </p>
                 </div>
-                <div class="video-container mb-8 video-placeholder" data-video-ids="6mRBOMvQ7N4">
-                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/DCNhyywDDTs/6mRBOMvQ7N4.jpg" alt="Too Late for Valhalla Preview" class="lazy-image video-thumbnail">
+                <div class="video-container mb-8 video-placeholder" data-video-ids="wMIHTwS1Fm8">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/DCNhyywDDTs/wMIHTwS1Fm8.jpg" alt="Too Late for Valhalla Preview" class="lazy-image video-thumbnail">
                     <div class="play-button"></div>
                 </div>
                 <!-- Feature Cards Grid -->
@@ -828,7 +828,21 @@
                         <div class="gallery-item">
                             <div class="image-container" style="padding-top: 56.25%;"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/SH3_Vignette.png" alt="Изображение проекта Valhalla 2"></div>
                         </div>
-                    </div>                      
+                    </div>   
+                    <div class="mt-8 space-y-6">
+                    <h4 class="text-xl font-bold text-center text-white">
+                        <span data-lang-ru>FMOD</span>
+                        <span data-lang-en>FMOD</span>
+                    </h4>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <div class="video-container video-placeholder" data-video-ids="OZg0OVGw4Oc">
+                            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/OZg0OVGw4Oc/hqdefault.jpg" alt="FMOD Preview 1" class="lazy-image video-thumbnail">
+                            <div class="play-button"></div>
+                        </div>
+                        <div class="gallery-item">
+                            <div class="image-container" style="padding-top: 56.25%;"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/fmod1.jpg" alt="Изображение FMOD 1"></div>
+                        </div>
+                    </div>
                 </div>
             </section>
             
@@ -1653,6 +1667,7 @@
     </script>
 </body>
 </html>
+
 
 
 
