--- a/index.html
+++ b/index.html
@@ -719,8 +719,8 @@
                         <span data-lang-en>To create an audio-centric architecture where the FMOD music track acts as a "conductor," controlling gameplay, level generation, shaders, and UI.</span>
                     </p>
                 </div>
-                <div class="video-container mb-8 video-placeholder" data-video-ids="wMIHTwS1Fm8">
-                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/DCNhyywDDTs/wMIHTwS1Fm8.jpg" alt="Too Late for Valhalla Preview" class="lazy-image video-thumbnail">
+                <div class="video-container mb-8 video-placeholder" data-video-ids="owCQXHS4-gg">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/DCNhyywDDTs/owCQXHS4-gg.jpg" alt="Too Late for Valhalla Preview" class="lazy-image video-thumbnail">
                     <div class="play-button"></div>
                 </div>
                 <!-- Feature Cards Grid -->
@@ -839,8 +839,9 @@
                             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/OZg0OVGw4Oc/hqdefault.jpg" alt="FMOD Preview 1" class="lazy-image video-thumbnail">
                             <div class="play-button"></div>
                         </div>
-                        <div class="gallery-item">
-                            <div class="image-container" style="padding-top: 56.25%;"><img class="lazy-image" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/fmod1.jpg" alt="Изображение FMOD 1"></div>
+                        <div class="video-container video-placeholder" data-video-ids="hB26OJBWPcQ">
+                            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="https://img.youtube.com/vi/hB26OJBWPcQ/hqdefault.jpg" alt="FMOD Preview 1" class="lazy-image video-thumbnail">
+                            <div class="play-button"></div>
                         </div>
                     </div>
                 </div>
@@ -1667,6 +1668,7 @@
     </script>
 </body>
 </html>
+
 
 
 
